<resources>
    <string name="app_name">TripMaker</string>
    <string name="first_name_txt">First Name</string>
    <string name="last_name_txt">Last Name</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="female_rb_txt">Female</string>
    <string name="register_btn_txt">Register</string>
    <string name="already_acct_txt">Already have an account?</string>
    <string name="login_txt">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_accnt_tv">Don\'t have an account yet?</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="message_txt" />
    <string name="send_message">Send</string>
    <string name="send_message_text" />
    <string name="create_new_trip">Create New Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="place_name">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="upload_img">Upload Image</string>
    <string name="add_members">Add Members</string>
    <string name="longitude_txt">Longitude:</string>
    <string name="latitude_txt">Latitude:</string>
    <string name="location_txt">Location:</string>
    <string name="members_tv">Members</string>
    <string name="join_trip_txt">Join Trip</string>
    <string name="user_name_label">User Name</string>
    <string name="sender_name">sender name</string>

</resources>
