<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/loginEmailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/email_txt"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password_txt"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/loginEmailET"
            app:layout_constraintStart_toStartOf="@+id/loginEmailET"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailET" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/mybutton"
            android:text="@string/login_txt"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordET"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordET"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordET" />

        <TextView
            android:id="@+id/noAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/no_accnt_tv"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/register_btn_txt"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/noAccountTv"
            app:layout_constraintStart_toStartOf="@+id/noAccountTv"
            app:layout_constraintTop_toBottomOf="@+id/noAccountTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>